[project]
name = "medical-mcps"
version = "0.1.11"
description = "MCP servers for biological and medical APIs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "Pascal Brokmeier", email = "git@pascalbrokmeier.de"},
]
keywords = [
    "mcp",
    "biology",
    "medical",
    "bioinformatics",
    "api",
    "reactome",
    "kegg",
    "uniprot",
    "chembl",
    "pubmed",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx[http2]>=0.27.0",
    "starlette>=0.49.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "chembl-webresource-client>=0.10.9",
    "curl-cffi>=0.13.0",
    "hishel[httpx,requests]>=1.1.5",
    "tenacity>=8.2.0",
    "sentry-sdk[mcp]>=2.44.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/pascalwhoop/medical-mcps"
Documentation = "https://github.com/pascalwhoop/medical-mcps#readme"
Repository = "https://github.com/pascalwhoop/medical-mcps"
Issues = "https://github.com/pascalwhoop/medical-mcps/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-watch>=4.2.0",
    "tavern>=2.0.0",
    "requests>=2.31.0",
]

[project.scripts]
medical-mcps = "medical_mcps.http_server:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["medical_mcps"]

[tool.pytest.ini_options]
timeout = 600
timeout_method = "thread"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
